--- a/18ywgmc/programme/index.html
+++ b/18ywgmc/programme/index.html
@@ -134,7 +134,8 @@
   <h6 class="blue">&#9632; Rubén Izquierdo (Universidad Complutense de Madrid - ICMAT, Spain)</h6>
   <p><em>Title:</em> Coisotropic reduction in different phase spaces</p>
   <em>Abstract:</em>
-  <p class="mb-5 justify">In a classical mechanical system, depending on the underlying phase space, there is a Poisson bracket (which is the case for symplectic and cosymplectic manifolds) or a Jacobi bracket (in the case of contact and cocontact manifolds). With these brackets we can define coisotropic submanifolds, which we can quotient by a canonical involutive distribution on the submanifold. The aim of this talk is to study the different types of inherited structures on these quotients, depending on the relative position of the submanifold to certain canonical distributions defined on the phase space.</p>
+  <p class="justify">In a classical mechanical system, depending on the underlying phase space, there is a Poisson bracket (which is the case for symplectic and cosymplectic manifolds) or a Jacobi bracket (in the case of contact and cocontact manifolds). With these brackets we can define coisotropic submanifolds, which we can quotient by a canonical involutive distribution on the submanifold. The aim of this talk is to study the different types of inherited structures on these quotients, depending on the relative position of the submanifold to certain canonical distributions defined on the phase space.</p>
+  <p class="mb-5 justify">You can find the slides <a target="_blank" href="./../files/izquierdo.pdf">here</a>.</p>
   
   <h6 class="blue">&#9632; Samuel Luque Astorga (Universidad Complutense de Madrid, Spain)</h6>
   <p><em>Title:</em> A Review on Reduction and Reconstruction of Dynamics in Symplectic Geometry</p>
