--- a/18ywgmc/programme/index.html
+++ b/18ywgmc/programme/index.html
@@ -146,7 +146,8 @@
   <h6 class="blue">&#9632; Arnoldo Guerra IV (Universitat de Barcelona, Spain)</h6>
   <p><em>Title:</em> Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</p>
   <em>Abstract:</em>
-  <p class="mb-5 justify">This talk will focus on the construction of canonical lifts of group actions and their generating vector fields to the first-jet and first-jet dual bundles on which the Lagrangian and De Donder–Weyl Hamiltonian formalisms for first-order field theories take place. Our work introduces the notion of a canonical lift in the De Donder–Weyl Hamiltonian formalism, for both regular and singular field theories, while the Lagrangian analog has been well known for many years. The importance of canonical lifts in defining natural symmetries will be emphasized in our Hamiltonian construction. Our work will be illustrated in an example field theory: Einstein-Cartan gravity in \(3 + 1\) dimensions.</p>
+  <p class="justify">This talk will focus on the construction of canonical lifts of group actions and their generating vector fields to the first-jet and first-jet dual bundles on which the Lagrangian and De Donder–Weyl Hamiltonian formalisms for first-order field theories take place. Our work introduces the notion of a canonical lift in the De Donder–Weyl Hamiltonian formalism, for both regular and singular field theories, while the Lagrangian analog has been well known for many years. The importance of canonical lifts in defining natural symmetries will be emphasized in our Hamiltonian construction. Our work will be illustrated in an example field theory: Einstein-Cartan gravity in \(3 + 1\) dimensions.</p>
+  <p class="mb-5 justify">You can find the slides <a target="_blank" href="./../files/guerra.pdf">here</a>.</p>
   
   <h6 class="blue">&#9632; Federico Vesentini (University of Verona, Italy)</h6>
   <p><em>Title:</em> A Brownian–Markov Stochastic Model for Cart-like Wheeled Mobile Robots</p>
