--- a/18ywgmc/programme/index.html
+++ b/18ywgmc/programme/index.html
@@ -105,12 +105,14 @@
   <h6 id="T_Stratoglou" class="blue">&#9632; Efstratios Stratoglou (Universidad Politécnica de Madrid, Spain)</h6>
   <p><em>Title:</em> Virtual constraints on Lie groups</p>
   <em>Abstract:</em>
-  <p class="mb-5 justify">Virtual constraints are relations imposed on a control system that become invariant via feedback control, as opposed to physical constraints acting on the system. Nonholonomic systems are mechanical systems with non-integrable constraints on the velocities. In this talk, we introduce the notion of virtual nonholonomic constraints on a Lie group in a geometric framework which is a controlled invariant subspace of the Lie algebra associated with the Lie group, and we show the existence and uniqueness of a control law preserving this subspace. We illustrate the theory with various examples and present simulation results for an application.</p>
+  <p class="justify">Virtual constraints are relations imposed on a control system that become invariant via feedback control, as opposed to physical constraints acting on the system. Nonholonomic systems are mechanical systems with non-integrable constraints on the velocities. In this talk, we introduce the notion of virtual nonholonomic constraints on a Lie group in a geometric framework which is a controlled invariant subspace of the Lie algebra associated with the Lie group, and we show the existence and uniqueness of a control law preserving this subspace. We illustrate the theory with various examples and present simulation results for an application.</p>
+  <p class="mb-5 justify">You can find the slides <a target="_blank" href="./../files/stratoglou.pdf">here</a>.</p>
   
   <h6 id="T_Jagna" class="blue">&#9632; Jagna Wiśniewska (Universitat Politècnica de Catalunya, Spain)</h6>
   <p><em>Title:</em> Floer theory in the analysis of Hamiltonian systems</p>
   <em>Abstract:</em>
-  <p class="mb-5 justify">Modern symplectic geometry started as a mathematical formulation of classical mechanics. Examples of Hamiltonian dynamical systems arise in celestial mechanics or electromagnetism. Rabinowitz Floer homology captures the relation between closed solutions of Hamilton’s equations with a fixed energy and the geometry of the corresponding energy hypersurface. Even in the cases where the explicit solutions of Hamilton’s equations cannot be computed, Rabinowitz Floer homology might still be computable and provide information about the existence of closed orbits.</p>
+  <p class="justify">Modern symplectic geometry started as a mathematical formulation of classical mechanics. Examples of Hamiltonian dynamical systems arise in celestial mechanics or electromagnetism. Rabinowitz Floer homology captures the relation between closed solutions of Hamilton’s equations with a fixed energy and the geometry of the corresponding energy hypersurface. Even in the cases where the explicit solutions of Hamilton’s equations cannot be computed, Rabinowitz Floer homology might still be computable and provide information about the existence of closed orbits.</p>
+  <p class="mb-5 justify">You can find the slides <a target="_blank" href="./../files/wisniewska.pdf">here</a>.</p>
   
   <h6 id="T_Schlarb" class="blue">&#9632; Markus Schlarb (Julius-Maximilians-Universität Würzburg, Germany)</h6>
   <p><em>Title:</em> Rolling Reductive Homogeneous Spaces</p>
