--- a/gamma/index.html
+++ b/gamma/index.html
@@ -111,7 +111,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading29">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse29" aria-expanded="false" aria-controls="collapse29">
-								<h5>TBA
+								<h5>Morse theory and Floer homology
 								<br>
 								Jagna Wiśniewska &#8213; 29/02/2024, 21:00</h5>
 							</button>
@@ -120,7 +120,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								Morse homology relates the dynamics given by the gradient flow of a function to the topology of the underlying manifold. Knowing the critical points of a Morse function and their Morse indexes, we can infer the topology of the manifold. And vice versa: knowing the topology of the manifold we can establish a lover bound on the number of the critical points of a Morse function. In a similar fashion the Floor homology relates the 1-periodic orbits of the Hamiltonian flow to the topology of the underlying symplectic manifold.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
 							</div>
