--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -51,6 +51,9 @@
         <li class="nav-item">
           <a class="nav-link" href="./travel-accomodation/index.html" aria-disabled="true">Travel and accomodation</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./pictures/index.html" aria-disabled="true">Pictures</a>
+        </li>
       </ul>
     </div>
   </div>
