--- a/18ywgmc/pictures/index.html
+++ b/18ywgmc/pictures/index.html
@@ -45,10 +45,10 @@
           <a class="nav-link" href="./../participants/index.html" aria-disabled="true">Participants</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="./../travel-accomodation/index.html" aria-disabled="true">Travel and accomodation</a>
+          <a class="nav-link" href="./../travel-accomodation/index.html" aria-disabled="true">Travel and accomodation</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./../pictures/index.html" aria-disabled="true">Pictures</a>
+          <a class="nav-link active" href="./../pictures/index.html" aria-disabled="true">Pictures</a>
         </li>
       </ul>
     </div>
@@ -59,43 +59,26 @@
 <div class="container mt-3">
 
 
-	<h1 class="mb-3">Travel and accomodation</h1>
+	<h1 class="mb-3">Pictures</h1>
 
-  <h3 class="my-4">How to reach us</h3>
+  <!-- <div class="row">
+    <div class="col-sm-5 m-2">
+      <img src="./../img/1.jpeg" class="img-fluid">
+    </div>
+  </div> -->
 
-  <p>The <a href="https://www.fuw.edu.pl/" target="_blank">Faculty of Physics</a> of the <a href="https://en.uw.edu.pl/" target="_blank">University of Warsaw</a> is in <a href="https://maps.app.goo.gl/nY6qrgEo3nPAKbkP7" target="_blank">Ludwika Pasteura 5, 02-093 Warsaw, Poland.</a> The conference will take place in Room 1.03, in the first floor.</p>
+  <div class="my-row">
+  <div class="my-column my-left">
+    <img src="./../img/1.jpeg">
+    <img src="./../img/2.jpeg">
+  </div>
+  <div class="my-column my-right">
+    <img src="./../img/3.jpeg">
+  </div>
+</div>
 
-  <h3 class="my-4">Hotels</h3>
 
-  <ul>
-    <li>
-      <a href="http://enhera.strony.uw.edu.pl/" target="_blank">Hera Guest House</a>
-    </li>
-    <li>
-      <a href="https://all.accor.com/hotel/2894/index.en.shtml" target="_blank">Ibis Warszawa Centrum **</a>
-    </li>
-    <li>
-      <a href="https://www.hotelmdm.com.pl/" target="_blank">MDM Hotel ***</a>
-    </li>
-    <li>
-      <a href="https://all.accor.com/hotel/3383/index.en.shtml" target="_blank">Novotel Warszawa Centrum ****</a>
-    </li>
-  </ul>
 
-  <h3 class="my-4">Restaurants</h3>
-  <p>The following restaurants are close the Faculty of Physics:</p>
-  <ul>
-    <li><a href="https://maps.app.goo.gl/UMUPHwEFMBkQjjmC6" target="_blank">Cafeteria of the Faculty of Biology</a>: Cheap and good local food.</li>
-    <li><a href="https://maps.app.goo.gl/RN9zxWCicdrsJ6yu8" target="_blank">Jeff's</a>: American food.</li>
-    <li><a href="https://maps.app.goo.gl/mRF8jq16tQ8keyt3A" target="_blank">Kuchnia Za Ścianą</a>: Polish food.</li>
-  </ul>
-	<p>The following restaurants are around the city center and serve local food:</p>
-  <ul>
-    <li><a href="https://maps.app.goo.gl/hcbmQ9y8EbVBNybTA" target="_blank">U Szwejka</a>. This restaurant is located in Plac Konstytucji, right below the MDM Hotel.</li>
-    <li><a href="https://maps.app.goo.gl/TBAnQJajrUYZcwn79" target="_blank">Zapiecek</a>. There are many Zapiecek restaurants in Warsaw. This one is located next to the old town. Their speciality are <em>pierogi</em>.</li>
-    <li><a href="https://maps.app.goo.gl/u28tzAd3hvmj9R3n9" target="_blank">Syrena Irena</a>. This restaurant is placed next to the statue of Copernicus, in Nowy Świat.</li>
-    <li><a href="https://maps.app.goo.gl/DUNKgo6vFcwnHcE1A" target="_blank">Lokal Vegan Bistro</a>. A vegan restaurant close to the Palace of Culture and Science.</li>
-  </ul>
 </div>
 
 <div class="container-fluid footer mt-5 pt-3 pb-1">
