--- a/18ywgmc/programme/index.html
+++ b/18ywgmc/programme/index.html
@@ -47,6 +47,9 @@
         <li class="nav-item">
           <a class="nav-link" href="./../travel-accomodation/index.html" aria-disabled="true">Travel and accomodation</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./../pictures/index.html" aria-disabled="true">Pictures</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -208,12 +211,14 @@
   <em>Abstract:</em>
   <p class="justify">This poster introduces \(k\)-contact geometry and it relates it to the so-called \(k\)-symplectic geometry, extended to the \(k\)-contact cases some properties known in contact geometry. In general, \(k\)-contact geometry is mainly used to study field theories, but we here develop a new approach to study ordinary differential equations.</p>
 
-  <p class="mb-5 justify">Then, we use our results to analyse a particular type of systems of first-order differential equations, the so-called {\it Lie systems}, whose properties are determined by a Lie algebra of vector fields of Hamiltonian vector fields relative to a \(k\)-contact structure. The obtained systems, the hereafter called \(k\)-contact Lie systems, are analysed and applied to study relevant systems of ordinary differential equations with applications in physics and mathematics.</p>
+  <p class="justify">Then, we use our results to analyse a particular type of systems of first-order differential equations, the so-called {\it Lie systems}, whose properties are determined by a Lie algebra of vector fields of Hamiltonian vector fields relative to a \(k\)-contact structure. The obtained systems, the hereafter called \(k\)-contact Lie systems, are analysed and applied to study relevant systems of ordinary differential equations with applications in physics and mathematics.</p>
+  <p class="mb-5 justify">You can find the poster <a target="_blank" href="./../files/sobczak.pdf">here</a>.</p>
   
   <h6 class="blue">&#9632; Xavier Rivas (Universidad Internacional de La Rioja, Spain)</h6>
   <p><em>Title:</em> Multicontact framework for non-conservative field theories</p>
   <em>Abstract:</em>
-  <p class="mb-5 justify">A new geometric structure inspired by multisymplectic and contact geometries, called <em>multicontact structure</em>, has been developed recently to describe non-conservative and action-dependent classical field theories. We review the main features of this formulation, showing how it is applied to study some classical theories in theoretical physics which are modified in order to include action-dependence; namely: the modified Klein-Gordon equation, and the action-dependent bosonic string.</p>
+  <p class="justify">A new geometric structure inspired by multisymplectic and contact geometries, called <em>multicontact structure</em>, has been developed recently to describe non-conservative and action-dependent classical field theories. We review the main features of this formulation, showing how it is applied to study some classical theories in theoretical physics which are modified in order to include action-dependence; namely: the modified Klein-Gordon equation, and the action-dependent bosonic string.</p>
+  <p class="mb-5 justify">You can find the poster <a target="_blank" href="./../files/rivas.pdf">here</a>.</p>
   
   <h6 class="blue">&#9632; Bartosz M. Zawora (University of Warsaw, Poland)</h6>
   <p><em>Title:</em> An energy-momentum method for ODEs admitting a \(k\)-symplectic structure</p>
