--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -47,6 +47,9 @@
         <li class="nav-item">
           <a class="nav-link" href="./../travel-accomodation/index.html" aria-disabled="true">Travel and accomodation</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./../pictures/index.html" aria-disabled="true">Pictures</a>
+        </li>
       </ul>
     </div>
   </div>
