--- a/18ywgmc/pictures/index.html
+++ b/18ywgmc/pictures/index.html
@@ -69,11 +69,44 @@
 
   <div class="my-row">
   <div class="my-column my-left">
-    <img src="./../img/1.jpeg">
-    <img src="./../img/2.jpeg">
+    <a href="./../img/4.JPG" target="_blank"><img src="./../img/4.JPG"></a>
+    <a href="./../img/2.jpeg" target="_blank"><img src="./../img/2.jpeg"></a>
+    <a href="./../img/5.JPG" target="_blank"><img src="./../img/5.JPG"></a>
+    <a href="./../img/7.JPG" target="_blank"><img src="./../img/7.JPG"></a>
+    <a href="./../img/8.JPG" target="_blank"><img src="./../img/8.JPG"></a>
+    <a href="./../img/10.JPG" target="_blank"><img src="./../img/10.JPG"></a>
+    <a href="./../img/12.JPG" target="_blank"><img src="./../img/12.JPG"></a>
+    <a href="./../img/14.JPG" target="_blank"><img src="./../img/14.JPG"></a>
+    <a href="./../img/16.JPG" target="_blank"><img src="./../img/16.JPG"></a>
+    <a href="./../img/18.JPG" target="_blank"><img src="./../img/18.JPG"></a>
+    <a href="./../img/22.JPG" target="_blank"><img src="./../img/22.JPG"></a>
+    <a href="./../img/23.JPG" target="_blank"><img src="./../img/23.JPG"></a>
+    <a href="./../img/24.JPG" target="_blank"><img src="./../img/24.JPG"></a>
+    <a href="./../img/26.JPG" target="_blank"><img src="./../img/26.JPG"></a>
+    <a href="./../img/28.JPG" target="_blank"><img src="./../img/28.JPG"></a>
+    <a href="./../img/31.JPG" target="_blank"><img src="./../img/31.JPG"></a>
+    <a href="./../img/33.JPG" target="_blank"><img src="./../img/33.JPG"></a>
+    <a href="./../img/36.JPG" target="_blank"><img src="./../img/36.JPG"></a>
+    <a href="./../img/3.jpeg" target="_blank"><img src="./../img/3.jpeg"></a>
   </div>
   <div class="my-column my-right">
-    <img src="./../img/3.jpeg">
+    <a href="./../img/1.jpeg" target="_blank"><img src="./../img/1.jpeg"></a>
+    <a href="./../img/34.JPG" target="_blank"><img src="./../img/34.JPG"></a>
+    <a href="./../img/6.JPG" target="_blank"><img src="./../img/6.JPG"></a>
+    <a href="./../img/9.JPG" target="_blank"><img src="./../img/9.JPG"></a>
+    <a href="./../img/11.JPG" target="_blank"><img src="./../img/11.JPG"></a>
+    <a href="./../img/13.JPG" target="_blank"><img src="./../img/13.JPG"></a>
+    <a href="./../img/15.JPG" target="_blank"><img src="./../img/15.JPG"></a>
+    <a href="./../img/35.jpeg" target="_blank"><img src="./../img/35.jpeg"></a>
+    <a href="./../img/17.JPG" target="_blank"><img src="./../img/17.JPG"></a>
+    <a href="./../img/19.JPG" target="_blank"><img src="./../img/19.JPG"></a>
+    <a href="./../img/20.JPG" target="_blank"><img src="./../img/20.JPG"></a>
+    <a href="./../img/37.JPG" target="_blank"><img src="./../img/37.JPG"></a>
+    <a href="./../img/21.JPG" target="_blank"><img src="./../img/21.JPG"></a>
+    <a href="./../img/27.JPG" target="_blank"><img src="./../img/27.JPG"></a>
+    <a href="./../img/29.JPG" target="_blank"><img src="./../img/29.JPG"></a>
+    <a href="./../img/30.JPG" target="_blank"><img src="./../img/30.JPG"></a>
+    <a href="./../img/32.JPG" target="_blank"><img src="./../img/32.JPG"></a>
   </div>
 </div>
 
