--- a/18ywgmc/programme/index.html
+++ b/18ywgmc/programme/index.html
@@ -85,7 +85,8 @@
   <h6 id="C_Vermeeren"  class="mt-4 blue">&#9632; <a target = "_blank" href="https://matsvermeeren.xyz/">Mats Vermeeren</a> (Loughborough University, United Kingdom)</h6>
   <p><em>Title:</em> Hamiltonian and Lagrangian perspectives on integrable systems</p>
   <em>Abstract:</em>
-  <p class="mb-5 justify">Classical integrable systems are traditionally formulated in terms of Hamiltonian mechanics. We will review this perspective, with the Liouville-Arnold theorem as a key result, and contrast it with a much more recent approach to integrable systems based on Lagrangian mechanics. The central objects in this approach are known as "Lagrangian multiforms" or "pluri-Lagrangian systems". After developing both perspectives for integrable ODEs, we will briefly discuss some other versions of Lagrangian multiform theory, applicable to integrable PDEs, differential-difference equations, and fully discrete lattice equations.</p>
+  <p class="justify">Classical integrable systems are traditionally formulated in terms of Hamiltonian mechanics. We will review this perspective, with the Liouville-Arnold theorem as a key result, and contrast it with a much more recent approach to integrable systems based on Lagrangian mechanics. The central objects in this approach are known as "Lagrangian multiforms" or "pluri-Lagrangian systems". After developing both perspectives for integrable ODEs, we will briefly discuss some other versions of Lagrangian multiform theory, applicable to integrable PDEs, differential-difference equations, and fully discrete lattice equations.</p>
+  <p class="mb-5 justify">You can find the slides <a target="_blank" href="./../files/vermeeren.pdf">here</a>.</p>
 
   <h3 class="my-4">Short talks</h3>
   
