--- a/gamma/index.html
+++ b/gamma/index.html
@@ -212,7 +212,7 @@
 								<p class="text-justify">
   								Morse homology relates the dynamics given by the gradient flow of a function to the topology of the underlying manifold. Knowing the critical points of a Morse function and their Morse indexes, we can infer the topology of the manifold. And vice versa: knowing the topology of the manifold we can establish a lower bound on the number of the critical points of a Morse function. In a similar fashion the Floor homology relates the 1-periodic orbits of the Hamiltonian flow to the topology of the underlying symplectic manifold.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/morQMtaYlqo' target="_blank">Jagna Wiśniewska --- Morse theory and Floer homology</a>
 							</div>
 						</div>
 					</div>
