--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 
 					<li class='mb-2'>X. Gràcia, J. de Lucas, X. Rivas and N. Román-Roy, "On Darboux theorems for geometric structures induced by closed forms". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2306.08556" target="_blank">2306.08556</a></li>
 
-					<li class='mb-2'>X. Rivas, M. Salgado and S. Souto, "Some contributions to <em>k</em>-contact Lagrangian field equations, symmetries and dissipation laws". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2304.00833" target="_blank">2304.00833</a></li>
+					<li class='mb-2'>X. Rivas, M. Salgado and S. Souto, "Some contributions to <em>k</em>-contact Lagrangian field equations, symmetries and dissipation laws". <em>Rev. Math. Phys.</em> (to appear) arxiv: <a href="https://arxiv.org/abs/2304.00833" target="_blank">2304.00833</a></li>
 
 					<li class='mb-2'>J. de Lucas, X. Rivas, S. Vilariño and B. M. Zawora, "On <em>k</em>-polycosymplectic Marsden&ndash;Weinstein reductions". <em>J. Geom. Phys.</em> <strong>191</strong>:104899, 2023. arxiv: <a href="https://arxiv.org/abs/2302.09037" target="_blank">2302.09037</a> doi: <a href="https://doi.org/10.1016/j.geomphys.2023.104899" target="_blank">10.1016/j.geomphys.2023.104899</a></li>
 
 					<li class='mb-2'>J. Gaset, A. López-Gordón and X. Rivas, "Symmetries, conservation and dissipation in time-dependent contact systems". <em>Fortschr. Phys.</em> <strong>71</strong>(8-9):2300048, 2023. arxiv: <a href="https://arxiv.org/abs/2212.14848" target="_blank">2212.14848</a> doi: <a href="https://doi.org/10.1002/prop.202300048" target="_blank">10.1002/prop.202300048</a></li>
 
-					<li class='mb-2'>J. Gaset, M. Lainz, A. Mas and X. Rivas, "The Herglotz variational principle for dissipative field theories". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2211.17058" target="_blank">2211.17058</a></li>
+					<li class='mb-2'>J. Gaset, M. Lainz, A. Mas and X. Rivas, "The Herglotz variational principle for dissipative field theories". <em>Geom. Mech.</em> (to appear) arxiv: <a href="https://arxiv.org/abs/2211.17058" target="_blank">2211.17058</a></li>
 
 					<li class='mb-2'>X. Rivas, "Nonautonomous <em>k</em>-contact field theories". <em>J. Math. Phys.</em> <strong>64</strong>(3):033507, 2023. arxiv: <a href="https://arxiv.org/abs/2210.09166" target="_blank">2210.09166</a> doi: <a href="https://doi.org/10.1063/5.0131110" target="_blank">10.1063/5.0131110</a></li>
 
