--- a/gamma/index.html
+++ b/gamma/index.html
@@ -183,7 +183,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading30">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse30" aria-expanded="false" aria-controls="collapse30">
-								<h5>TBA
+								<h5>Coalgebra symmetry and its applications
 								<br>
 								Giorgio Gubbiotti (Università degli Studi di Milano) &#8213; 07/03/2024, 21:00</h5>
 							</button>
@@ -192,7 +192,10 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								A long-standing problem in the theory of Integrable Systems is how to construct new integrable systems. For systems in Classical Mechanics a very proficient method was introduced by Ballesteros and Ragnisco in mid-90s. Such a method is based on the notion of coalgebra, and roughly speaking allows the extension of integrable systems in one-degree of freedom to an arbitrary number of degrees of freedom. In this talk I will review the fundamental ideas of this approach and present some novel applications also outside its original formulation.
+								</p>
+								<p class="text-justify">
+								Based on joint works with Danilo Latini, Benjamin K. Tapley.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
 							</div>
