--- a/logos/index.html
+++ b/logos/index.html
@@ -37,7 +37,7 @@
 		<div class="container mt-4">
 
 
-			<div class="row">				
+			<div class="row" style="background-color:#eee;">				
 
 				<!-- <h3 class="teal">&#9632; Members</h3> -->
 				<h5>Black:</h5>
@@ -48,7 +48,7 @@
 				</div>
 
 			</div>
-			<div class="row">				
+			<div class="row" style="background-color:#eee;">				
 
 				<!-- <h3 class="teal">&#9632; Members</h3> -->
 				<h5>Blue:</h5>
@@ -59,7 +59,7 @@
 				</div>
 
 			</div>
-			<div class="row">				
+			<div class="row" style="background-color:#eee;">				
 
 				<!-- <h3 class="teal">&#9632; Members</h3> -->
 				<h5>White:</h5>
