--- a/logos/index.html
+++ b/logos/index.html
@@ -44,7 +44,7 @@
 
 
 				<div class="col-sm-4 m-2">
-					<img src="black.svg" class="img-fluid" alt="...">
+					<img src="black.svg" class="img-fluid" alt="..." style="border: 1px solid black">
 				</div>
 
 			</div>
@@ -55,7 +55,7 @@
 
 
 				<div class="col-sm-4 m-2">
-					<img src="blue.svg" class="img-fluid" alt="...">
+					<img src="blue.svg" class="img-fluid" alt="..." style="border: 1px solid black">
 				</div>
 
 			</div>
@@ -66,7 +66,7 @@
 
 
 				<div class="col-sm-4 m-2">
-					<img src="white.svg" class="img-fluid" alt="...">
+					<img src="white.svg" class="img-fluid" alt="..." style="border: 1px solid black">
 				</div>
 
 			</div>
