--- a/papers/index.html
+++ b/papers/index.html
@@ -32,6 +32,7 @@
 				<h2 class="blue">&#9632; Papers</h2>
 
 				<ol reversed class="ms-4">
+					<li class='mb-2'><a href="./.pdf" target="_blank"><strong>(PDF)</strong></a> J. de Lucas, J. Lange and X. Rivas, "A symplectic approach to Schrödinger equations in the infinite-dimensional unbounded setting". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2312.09192 " target="_blank">2312.09192 </a></li>
 
 					<li class='mb-2'><a href="./.pdf" target="_blank"><strong>(PDF)</strong></a> L. Colombo, J. de Lucas, X. Rivas and B. M. Zawora, "An energy-momentum method for ordinary differential equations with an underlying <em>k</em>-polysymplectic manifold". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2311.15035" target="_blank">2311.15035</a></li>
 
