--- a/gamma/index.html
+++ b/gamma/index.html
@@ -109,32 +109,14 @@
 				<h4 class="teal mb-3 mt-3">Spring 2024</h4>
 				<div class="accordion" id="accordion-spring24">
 					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading35">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse35" aria-expanded="false" aria-controls="collapse35">
+						<h3 class="accordion-header" id="heading33">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse33" aria-expanded="false" aria-controls="collapse33">
 								<h5>TBA
 								<br>
 								Jakob Hedicke (Centre de Recherches Mathématiques) &#8213; 11/04/2024, 21:00</h5>
 							</button>
 						</h3>
-						<div id="collapse35" class="accordion-collapse collapse" aria-labelledby="heading35" data-bs-parent="#accordion-spring24">
-							<div class="accordion-body">
-								<h6>Abstract</h6>
-								<p class="text-justify">
-  								TBA
-								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading34">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse34" aria-expanded="false" aria-controls="collapse34">
-								<h5>TBA
-								<br>
-								TBA &#8213; 04/04/2024, 21:00</h5>
-							</button>
-						</h3>
-						<div id="collapse34" class="accordion-collapse collapse" aria-labelledby="heading34" data-bs-parent="#accordion-spring24">
+						<div id="collapse33" class="accordion-collapse collapse" aria-labelledby="heading33" data-bs-parent="#accordion-spring24">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
@@ -149,7 +131,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse32" aria-expanded="false" aria-controls="collapse32">
 								<h5>TBA
 								<br>
-								TBA &#8213; 21/03/2024, 21:00</h5>
+								TBA &#8213; 04/04/2024, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse32" class="accordion-collapse collapse" aria-labelledby="heading32" data-bs-parent="#accordion-spring24">
@@ -165,16 +147,16 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading31">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse31" aria-expanded="false" aria-controls="collapse31">
-								<h5>TBA
+								<h5>Basics on Hamiltonian multisymplectic geometry and applications to ordinary differential equations
 								<br>
-								TBA &#8213; 14/03/2024, 21:00</h5>
+								Javier de Lucas (University of Warsaw) &#8213; 21/03/2024, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse31" class="accordion-collapse collapse" aria-labelledby="heading31" data-bs-parent="#accordion-spring24">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								In this talk I will introduce the Hamiltonian formalism in multisymplectic geometry and different types of partial multisymplectic Marsden-Weinstein reductions. I will also briefly comment on the applications of multisymplectic geometry and multisymplectic reductions to Lie systems, i.e. systems on t-dependent ordinary differential equations whose dynamics is determined by a t-dependent vector field amounting to a curve in a finite-dimensional Lie algebra of vector fields.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
 							</div>
@@ -197,7 +179,8 @@
 								<p class="text-justify">
 								Based on joint works with Danilo Latini, Benjamin K. Tapley.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/VDvTo9KvLUo' target="_blank">Giorgio Gubbiotti --- Coalgebra symmetry and its applications
+</a>
 							</div>
 						</div>
 					</div>
