--- a/gamma/index.html
+++ b/gamma/index.html
@@ -158,7 +158,7 @@
 								<p class="text-justify">
   								In this talk I will introduce the Hamiltonian formalism in multisymplectic geometry and different types of partial multisymplectic Marsden-Weinstein reductions. I will also briefly comment on the applications of multisymplectic geometry and multisymplectic reductions to Lie systems, i.e. systems on t-dependent ordinary differential equations whose dynamics is determined by a t-dependent vector field amounting to a curve in a finite-dimensional Lie algebra of vector fields.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/q6DpryE13OY' target="_blank">Javier de Lucas --- Basics on Hamiltonian multisymplectic geometry and applications to ordinary differential equations</a>
 							</div>
 						</div>
 					</div>
