--- a/gamma/index.html
+++ b/gamma/index.html
@@ -129,16 +129,16 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading32">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse32" aria-expanded="false" aria-controls="collapse32">
-								<h5>TBA
+								<h5>An introduction to contact mechanics and field theories (I)
 								<br>
-								TBA &#8213; 04/04/2024, 21:00</h5>
+								Xavier Rivas (International University of La Rioja) &#8213; 04/04/2024, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse32" class="accordion-collapse collapse" aria-labelledby="heading32" data-bs-parent="#accordion-spring24">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								In this course, we will see how to use contact geometry to describe dynamical systems with dampings in a geometric way. We will use apply this to relevant physical examples. In the second part of the course, we will combine contact geometry with \(k\)-symplectic geometry to devise a geometric framework for field theories with dissipation.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
 							</div>
