--- a/gamma/index.html
+++ b/gamma/index.html
@@ -138,7 +138,13 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								In this course, we will see how to use contact geometry to describe dynamical systems with dampings in a geometric way. We will use apply this to relevant physical examples. In the second part of the course, we will combine contact geometry with \(k\)-symplectic geometry to devise a geometric framework for field theories with dissipation.
+  								Many important theories in modern physics can be stated using the tools of differential geometry. It is well known that symplectic geometry is the natural framework to deal with autonomous Hamiltonian mechanics. This admits several generalizations for nonautonomous systems and classical field theories, both regular and singular.
+
+								In recent years there has been a growing interest in studying dissipative mechanical systems from a geometric perspective by using contact structures. In this talk we will review the main results on contact mechanics and work out some examples.
+
+								Furthermore, field theories with damping will be described through a modification of the De Donder-Weyl Hamiltonian field theory. This is achieved by combining both contact geometry and \(k\)-symplectic structures, resulting in what we call the \(k\)-contact formalism.
+
+								Finally we will study some interesting examples: the damped vibrating string, the Burgers' equation and the Maxwell's equations of electromagnetism with dissipation.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
 							</div>
