--- a/gamma/index.html
+++ b/gamma/index.html
@@ -111,7 +111,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading33">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse33" aria-expanded="false" aria-controls="collapse33">
-								<h5>TBA
+								<h5>The group of contactomorphisms and orderability
 								<br>
 								Jakob Hedicke (Centre de Recherches Mathématiques) &#8213; 11/04/2024, 21:00</h5>
 							</button>
@@ -120,7 +120,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								In this talk we will review basic properties of groups of contactomorphisms, i.e., groups of diffeomorphisms of a manifold that preserve a given contact structure. In particular we will focus on the notion of orderability: The group of contactomorphisms of a co-oriented contact manifold and its universal cover carry a natural bi-invariant relation. An important open question in contact topology is the classification of co-oriented contact manifolds for which this relation is a partial order. We will discuss several examples of orderable and non-orderable contact manifolds and connections of this question to dynamical and topological properties of the contact manifold.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
 							</div>
