--- a/gamma/index.html
+++ b/gamma/index.html
@@ -146,7 +146,7 @@
 
 								Finally we will study some interesting examples: the damped vibrating string, the Burgers' equation and the Maxwell's equations of electromagnetism with dissipation.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/kTwwUptnwR0' target="_blank">Xavier Rivas --- An introduction to contact mechanics and field theories (I)</a>
 							</div>
 						</div>
 					</div>
