--- a/gamma/index.html
+++ b/gamma/index.html
@@ -109,6 +109,24 @@
 				<h4 class="teal mb-3 mt-3">Spring 2024</h4>
 				<div class="accordion" id="accordion-spring24">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading34">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse34" aria-expanded="false" aria-controls="collapse34">
+								<h5>TBA
+								<br>
+								Jagna Wiśniewska (Universitat Politècnica de Catalunya) &#8213; 18/04/2024, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse34" class="accordion-collapse collapse" aria-labelledby="heading34" data-bs-parent="#accordion-spring24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/yQHOEerd4Xg' target="_blank">Jakob Hedicke --- The group of contactomorphisms and orderability</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading33">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse33" aria-expanded="false" aria-controls="collapse33">
 								<h5>The group of contactomorphisms and orderability
@@ -122,7 +140,7 @@
 								<p class="text-justify">
   								In this talk we will review basic properties of groups of contactomorphisms, i.e., groups of diffeomorphisms of a manifold that preserve a given contact structure. In particular we will focus on the notion of orderability: The group of contactomorphisms of a co-oriented contact manifold and its universal cover carry a natural bi-invariant relation. An important open question in contact topology is the classification of co-oriented contact manifolds for which this relation is a partial order. We will discuss several examples of orderable and non-orderable contact manifolds and connections of this question to dynamical and topological properties of the contact manifold.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/yQHOEerd4Xg' target="_blank">Jakob Hedicke --- The group of contactomorphisms and orderability</a>
 							</div>
 						</div>
 					</div>
