--- a/gamma/index.html
+++ b/gamma/index.html
@@ -111,7 +111,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading34">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse34" aria-expanded="false" aria-controls="collapse34">
-								<h5>TBA
+								<h5>Periodic orbits on non-compact energy hypersurfaces
 								<br>
 								Jagna Wiśniewska (Universitat Politècnica de Catalunya) &#8213; 18/04/2024, 21:00</h5>
 							</button>
@@ -120,7 +120,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								Hamiltonian mechanics originates from physics, more precisely from classical mechanics. Examples of such systems can be found in celestial mechanics, describing the motion of a satellite under the gravitational forces of several astronomical objects. One of the main questions in Hamiltonian mechanics is to find periodic orbits on a fixed energy level set. In my talk, I will introduce the notion of Rabinowitz Floer homology and show how this algebraic invariant can be applied to the special class of tentacular Hamiltonians to answer the question of existence of periodic orbits for Hamiltonian systems on a fixed, non-compact energy level set.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/yQHOEerd4Xg' target="_blank">Jakob Hedicke --- The group of contactomorphisms and orderability</a> -->
 							</div>
