--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 				<p>I develop my research in differential geometry and its applications to mathematical physics, mechanics and field theory. I am part of the <a href="https://geomap.upc.edu/en">GEOMVAP</a> group. We collaborate with other groups, in particular with those in the <a href="http://gmcnet.webs.ull.es/">Geometry, Mechanics and Control Network</a>.</p>
 
-				<p>My PhD advisors were <a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a> and <a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia Sabaté</a>. You can find my thesis <a href = "docs/PhD.pdf">here</a>.</p>
+				<p>My PhD advisors were <a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a> and <a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia Sabaté</a>. You can find my thesis <a href = "docs/PhD.pdf" target="_blank">here</a>.</p>
 
 				<h5>List of publications:</h5>
 				<ol reversed class="ms-4">
