--- a/gamma/index.html
+++ b/gamma/index.html
@@ -109,6 +109,24 @@
 				<h4 class="teal mb-3 mt-3">Spring 2024</h4>
 				<div class="accordion" id="accordion-spring24">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading35">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse35" aria-expanded="false" aria-controls="collapse35">
+								<h5>Manifolds and supermanifolds as locally ringed spaces
+								<br>
+								Adam Maskalaniec (University of Warsaw) &#8213; 09/05/2024, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse35" class="accordion-collapse collapse" aria-labelledby="heading35" data-bs-parent="#accordion-spring24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								In this talk I will present an algebraic approach to smooth manifolds in the language of locally ringed spaces. It turns out that this setting allows us to extend the notion of manifold in various ways. Then, I will focus on presenting definition and basic theory on supermanifolds. The main goal of this talk is to explain the Batchelor-Gawędzki theorem that establishes relation between supermanifolds and vector bundles.
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/9tddLK2egGc' target="_blank">Jagna Wiśniewska --- Periodic orbits on non-compact energy hypersurfaces</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading34">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse34" aria-expanded="false" aria-controls="collapse34">
 								<h5>Periodic orbits on non-compact energy hypersurfaces
